# damned-memtrace

./: .gitignore  Cargo.toml  README.md
crates/memlib/: Cargo.toml
crates/memlib/src/: lib.rs
crates/memtrace/: Cargo.toml  app.manifest  resources.rc
crates/memtrace/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  styles.rs
test_gui_trainer/: CMakeLists.txt  GameStructAC.h  imgui.ini  main.cpp  memory_scan_ac.json
test_internal_dll/: CMakeLists.txt  GameStruct.h  dllmain.cpp
test_target/: CMakeLists.txt  README.md  entity_list_test.cpp  main.cpp
test_trainer/: GameStruct.h  README.md  trainer.cpp
