[package]
name = "memlib"
version.workspace = true
edition.workspace = true

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
]
